@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.537 2004-02-20 18:34:37 castaglia Exp $
+$Id: NEWS,v 1.538 2004-02-24 20:13:53 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -97,6 +97,9 @@ CVS
 - Bug 1696 - Include directive should support directories.  The Include
   directive now functions just like Apache's Include directive, including
   handling glob characters.
+- Bug 2311 - MaxClients counts unauthenticated users.  According to the
+  documentation, the MaxClients configuration directive should only count
+  authenticated clients.
 
 1.2.9 - Released 31-Oct-2003
 ---------------------------------
